adding orelim html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MovieFind</title>
+    <title>MovieFinder</title>
     <meta charset="UTF-8">
     <meta name = "viewport" content="width=device-width, initial-scale =1.0">
     <script src="./lib/bootstrap.js"></script>
@@ -12,27 +12,32 @@
     <script src="./lib/angular-animate.js" language="JavaScript" type="text/javascript"></script>
     <script src="./lib/jquery-2.0.3.min.js" language="JavaScript" type="text/javascript"></script>
     <script src="./js/API-hack.js" type="text/javascript"></script>
-</head>
+    <!--Rotten Tomato API Key
+        y6b9ytcux4tjc8x4dmkkqcug-->
+    </head>
 <body>
-    //Rotten Tomato API Key
-    //y6b9ytcux4tjc8x4dmkkqcug
-    <script>
-    $.ajax({
-        url: 'http://api.rottentomatoes.com/api/public/v1.0/lists/movies/upcoming.json',
-        data: {
-            apikey: 'y6b9ytcux4tjc8x4dmkkqcug'
-              },
-        type: 'GET',
-        dataType: 'jsonp',
-        headers: 'Access-Control-Allow-Origin: *',
-        success: function(data){
-        console.log('Success',data);console.log('Success',data.movies[0].title.replace(/\s/g, "") );
-               },
-    error: function(data){
-               }
+    <div id="container">
+        <h1 class="title">
+        WHAT MOVIE SHOULD I SEE?
+        </h1>
+        <div>
+            <p class="intro">Hey, do you want to know what showing at the movies that's actually worth seeing?
+                Well, now you don't have to wonder? Just Enter your minimal acceptabal rotten tomatoe score and I'll let you know
+                which movies opening this weekend meet or exceed that score., so you don't have to waste time being tempted by
+                a bad movie choice!
+            </p>
 
-});
-    </script>
-
+        My Movie Must fit the following criteria :
+        DVD or Movie
+        Current release opening, or Upcoming
+        Genre:
+        Rating:
+        Length:
+        Tomatoes score:
+        Audience score:
+        Starring:
+        Director:
+        </div>
+     </div>
 </body>
 </html>
