--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
     <title>MovieFinder</title>
     <meta charset="UTF-8">
@@ -12,37 +12,53 @@
     <script src="./lib/angular-animate.js" language="JavaScript" type="text/javascript"></script>
     <script src="./lib/jquery-2.0.3.min.js" language="JavaScript" type="text/javascript"></script>
     <script src="./js/API-hack.js" type="text/javascript"></script>
+    <script src="lib/angular-resource.min.js"></script>
     <!--Rotten Tomato API Key
         y6b9ytcux4tjc8x4dmkkqcug-->
     </head>
-<body>
-    <div class="jumbotron" ng-app>
-        <h2 class="title">
-        WHAT MOVIE SHOULD I SEE?
-        </h2>
-        <h3 class="title">
-         (AND IT BETTER BE GOOD!)
-        </h3>
-        <div>
-            <p class="intro">Hey, do you want to know what's showing at the movies that's actually worth seeing?
-                Well, now you don't have to wonder? Just enter the least acceptable Rotten Tomatoes score and
-                I'll just show you the movies opening this weekend meet or exceed that score. That way you don't
-                have to waste time being tempted to go see what is just going to be another terrible night at the
-                movies, not to mention a waste of your hard earned cash!!
-            </p>
-            <div class= "form" ng-controller="mctrl">
-            <form ng-submit = "submitFilter()">
-              <input type="text" placolder= "75 or Higher">
-              <input type ="submit" class="btn-primary">
-            </form>
+<body ng-controller="mctrl">
+    <div id="container">
+        <div class ="row">
+            <div class = "col-md-3">
+                <ul class="list-group">
+                      <li class="list-group-item" ng-repeat="movie in movielist | filter: scoreMatch() | orderBy:audienceScore" >
+                          <img ng-src="{{movie.posters.profile}}"/>
+                      </li>
+                    </ul>
             </div>
-            <div class="result">
-            <ul class="list-group">
-                <li class="list-group-item" ng-repeat="movie in movies">
-                    <span>{{movie.title}}</span></li>
-            </ul>
-            </div>
+            <div class = "col-md-6">
+                <h2 class="title">
+                    WHAT MOVIE SHOULD I SEE?
+                </h2>
+                <h3 class="title">
+                     (AND IT BETTER BE GOOD!)
+                </h3>
+
+                <p class="intro">Hey, do you want to know what's showing at the movies that's actually worth seeing?
+                    Well, now you don't have to wonder? Just enter the least acceptable Rotten Tomatoes score and
+                    I'll just show you the movies opening this weekend meet or exceed that score. That way you don't
+                    have to waste time being tempted to go see what is just going to be another terrible night at the
+                    movies, not to mention a waste of your hard earned cash!!
+                </p>
+                <div class= "form">
+                    <form ng-submit = "setMinScore()">
+                      <input type="text" placeholder= "75 or Above" class="value" ng-model='userMin'>
+                      <input type ="submit" class="btn-primary">
+                      <input ng-click= "clear()" type ="button"  value= "Clean Up" class="btn-primary clean" >
+                    </form>
+                    <div class ="error" ng-show="isEmpty"> There is no Movie up to your high standards. Try a lower score please"</div>
+                    <ul class="list-group">
+                      <li class="list-group-item" ng-repeat="movie in movielist | filter: scoreMatch() | orderBy:audienceScore" >
+                        My #{{$index + 1}} pick is {{movie.title}}, which has a score of {{movie.ratings.audience_score}}
+                      </li>
+                    </ul>
+                </div>
+              </div>
+              <div class = "col-md-3">
+
+              </div>
         </div>
-     </div>
 </body>
 </html>
+
+
