Oops minor HTML text change

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     Well, now you can just enter your least acceptable Rotten Tomatoes critics
                     score below, and you'll get a listing of opening movies that meet
                     or exceed that score. So, don't waste time watching yet another terrible movie,
-                    instead be confident you chose a movie based not on some marketing hype,
-                    but rather on what respected critics are actually recommending.
+                    instead be confident you chose a movie based, not on some marketing hype,
+                    but rather on what respected critics from across the country are actually recommending.
                 </p>
                 <div class= "form">
                     <form ng-submit = "setMinScore()">
